[package]
name = "load_image"
version = "0.1.0"
authors = ["Andrey Makuha <amakuha1912@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.2"
actix-web = "1.0.0"
actix-files = "0.1.1"
actix-session = "0.2.0"
reqwest = "=0.9.17"
image = "0.22.2"
serde = "*"
serde_qs = {version = "*", features = ["actix"] }